# gcodeviewer

./: AUDIT-FIX-PLAN.md  RUST-PARITY-PLAN.md  build.bat  package-lock.json  package.json  vite.config.mjs
WASM_FileProcessor/: Cargo.toml  ensure-pkg.mjs
WASM_FileProcessor/pkg-fallback/: gcode_file_processor.d.ts  gcode_file_processor.js
WASM_FileProcessor/src/: lib.rs  processor.rs  processor_properties.rs  tests.rs  utils.rs
WASM_FileProcessor/src/GCodeCommands/: G0G1.rs  G28.rs  G2G3.rs  MiscCommands.rs  ProcessLine.rs  ToolCommands.rs
WASM_FileProcessor/src/slicers/: CuraSlicer.rs  GenericSlicer.rs  IdeaMakerSlicer.rs  KiriMotoSlicer.rs  OrcaSlicer.rs  PrusaSlicer.rs  SuperSlicer.rs  mod.rs  slicer_base.rs
src/: gpupicker.ts  index.ts  lineshader.ts  processor.ts  processorproperties.ts  tools.ts  util.ts  viewer-api.ts  viewer-direct.ts  viewer-proxy.ts  viewer.ts  viewer.worker.ts  wasmprocessor.ts
src/GCodeCommands/: g0g1.ts  g2g3.ts  processline.ts  t.ts
src/GCodeLines/: index.ts  indexentry.ts
src/GCodeParsers/: prusaslicer.ts  slicerfactory.ts
src/Renderables/: bed.ts  buildobjects.ts  nozzle.ts  ruler.ts  viewbox.ts
